--- a/index.html
+++ b/index.html
@@ -7,16 +7,47 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="card" style="width: 18rem;">
+  <div class="card" style="width: 18rem;">
+    <img src="IMG/luan city volume 1.jpg" class="card-img-top" alt="luan santana">
+    <div class="card-body">
+      <h5 class="card-title">LUAN CITY</h5>
+      <p class="card-text">
+        "Luan City" é o nome dado ao emocionante álbum ao vivo de Luan Santana, gravado em São Paulo. Este projeto captura a energia vibrante da cidade, com uma produção de alta qualidade e uma banda talentosa. Luan apresenta uma mistura de novas músicas e sucessos, proporcionando uma experiência inesquecível para os fãs.</p>
+      </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Princípais faixas:</strong> "Abalo Emocional", "Seu Doutor", "Facilita", "Maldito Girasol" e "Coração Cigano"</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+ 
+  <div class="card" style="width: 18rem;">
+    <img src="IMG/luan city.jpg" class="card-img-top" alt="luan santana">
+    <div class="card-body">
+      <h5 class="card-title">LUAN CITY 2.0</h5>
+      <p class="card-text">
+"Luan City 2.0" é o novo álbum ao vivo do Luan Santana, gravado em um cenário urbano vibrante que recria a energia e a emoção de uma cidade moderna. Este projeto captura a essência das apresentações de Luan, combinando suas novas músicas com hits consagrados, proporcionando uma experiência inesquecível para os fãs.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Princípais faixas:</strong> "Meio Termo", "Mulher Segura", "EAI", "Ambiente Errado" e "Tímida"</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+  
+  <div class="card" style="width: 18rem;">
         <img src="IMG/AO VIVO NA LUA.jpg" class="card-img-top" alt="luan santana">
         <div class="card-body">
           <h5 class="card-title">AO VIVO NA LUA</h5>
-          <p class="card-text">Luan Rafael Domingos Santana é um cantor e compositor brasileiro. Iniciou sua carreira em 2009, com o lançamento do álbum independente Tô de Cara, e chegou ao estrelato com a canção "Meteoro".</p>
+          <p class="card-text">
+            "Na Lua" é o mais recente álbum ao vivo de Luan Santana, gravado em um cenário impressionante inspirado na superfície lunar. Com uma banda de alta qualidade e 13 músicas inéditas, Luan apresenta novas versões de seus sucessos.</p>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Nascimento: 13 de março de 1991 (idade 33 anos), Campo Grande, Mato Grosso do Sul, Brasil</li>
-          <li class="list-group-item">Irmãs: Bruna Domingos Santana</li>
-          <li class="list-group-item">Pais: Marizete Santana, Amarildo Aparecido de Santana</li>
+          <li class="list-group-item"><strong>Princípais faixas:</strong> "Clone", "Certeza", "Sedutor", "Coisas Que Eu Não Vou Deixar de Ter" e "Se Arrependimento Matasse"</li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Card link</a>
