--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 </head>
 <body>
+  
+   
+  <div class="card" style="width: 18rem;">
+    <img src="IMG/1977.jpg" class="card-img-top" alt="luan santana">
+    <div class="card-body">
+      <h5 class="card-title">1977</h5>
+      <p class="card-text">
+        "1977" é um álbum de estúdio do Luan Santana lançado em 2016. Este álbum é especial por celebrar a mulher, sendo lançado no ano do 50º aniversário da criação do Dia Internacional da Mulher. Com participações de grandes artistas como Ivete Sangalo, Anitta, Sandy, Marília Mendonça e Ana Carolina, o álbum traz uma mistura de sertanejo, bachata e country pop.</p>
+      </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Princípais faixas:</strong> "RG", "Fantasma", "Mesmo Sem Estar" e "Estaca Zero"</li>
+    </ul>
+    <div class="card-body">
+      <a href="https://youtube.com/playlist?list=PL-82ABGzbmAVA-G_nJILTqe1G99kAFFaN&feature=shared" class="card-link">Álbum</a>
+      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="IMG/viva.jpg" class="card-img-top" alt="luan santana">
+    <div class="card-body">
+      <h5 class="card-title">VIVA</h5>
+      <p class="card-text">
+        "VIVA" é um álbum ao vivo de Luan Santana, gravado em Salvador e lançado em 2019. Este projeto celebra a vida com um espetáculo grandioso, combinando hits consagrados e novas músicas. Com uma produção visual e sonora de alta qualidade, "VIVA" oferece aos fãs uma experiência inesquecível e emocionante.</p>
+      </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Princípais faixas:</strong> "Choque Térmico", "A", "Ignore" e "Moça Chique"</li>
+    </ul>
+    <div class="card-body">
+      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIbXJT3UvX-fhkryMqfDBNjw&feature=shared" class="card-link">Álbum</a>
+      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+    </div>
+  </div>
+  
+  <div class="card" style="width: 18rem;">
+    <img src="IMG/THE COMEBACK.avif" class="card-img-top" alt="luan santana">
+    <div class="card-body">
+      <h5 class="card-title">THE COMEBACK</h5>
+      <p class="card-text">
+        "The Comeback" marca o retorno triunfante de Luan Santana aos palcos. Após quase dois anos sem shows, Luan volta com energia renovada, apresentando sucessos e novas músicas. Gravado em um show com estrutura internacional, o álbum reafirma sua posição como um dos maiores artistas do sertanejo, conectando-se profundamente com os fãs.</p>
+      </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item"><strong>Princípais faixas:</strong> "Morena", "Sorria", "Ilha" e "Assim Nasce Um Bêbado"</li>
+    </ul>
+    <div class="card-body">
+      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIZtp65Zc_LxeQssvcyHcF5Q&feature=shared" class="card-link">Álbum</a>
+      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+    </div>
+  </div>
+  
   <div class="card" style="width: 18rem;">
     <img src="IMG/luan city volume 1.jpg" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -18,8 +68,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Abalo Emocional", "Seu Doutor", "Facilita", "Maldito Girasol" e "Coração Cigano"</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIagvLMkWLoOE-tCHfIePMMq&feature=shared" class="card-link">Álbum<a>
+      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
  
@@ -34,8 +84,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Meio Termo", "Mulher Segura", "EAI", "Ambiente Errado" e "Tímida"</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIYDtVBftrjfWP2VuKDlQrRh&feature=shared" class="card-link">Álbum</a>
+      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
   
@@ -50,8 +100,8 @@
           <li class="list-group-item"><strong>Princípais faixas:</strong> "Clone", "Certeza", "Sedutor", "Coisas Que Eu Não Vou Deixar de Ter" e "Se Arrependimento Matasse"</li>
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <a href="https://youtu.be/7sqvbH_ONcc?feature=shared" class="card-link">Clone</a>
+          <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
         </div>
       </div>
 </body>
