--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EX 10 - Bootstrap Animate</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
   
-   
+  <video autoplay muted loop id="bgVideo">
+    <source src="https://youtu.be/c5A2sCEJWPQ?feature=shared" type="video estrelas">
+</video>
+
+  <div class="container"> 
+    <div class="row"> 
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
     <img src="IMG/1977.jpg" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -24,7 +31,9 @@
       <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
+      </div>
 
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
     <img src="IMG/viva.jpg" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -40,7 +49,9 @@
       <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
+      </div>
   
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
     <img src="IMG/THE COMEBACK.avif" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -56,7 +67,9 @@
       <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
+      </div>
   
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
     <img src="IMG/luan city volume 1.jpg" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -72,7 +85,9 @@
       <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
+      </div>
  
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
     <img src="IMG/luan city.jpg" class="card-img-top" alt="luan santana">
     <div class="card-body">
@@ -88,7 +103,9 @@
       <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
     </div>
   </div>
+      </div>
   
+      <div class="col-md-4">
   <div class="card" style="width: 18rem;">
         <img src="IMG/AO VIVO NA LUA.jpg" class="card-img-top" alt="luan santana">
         <div class="card-body">
@@ -104,5 +121,9 @@
           <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
         </div>
       </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
