--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EX 10 - Bootstrap Animate</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css"
-</head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
 <body>
-  
-  <video autoplay muted loop id="bgVideo">
-    <source src="https://youtu.be/c5A2sCEJWPQ?feature=shared" type="video estrelas">
-</video>
+
+  <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/YtSECdCxgNI?si=4PC5beebgILHBcyW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 
   <div class="container"> 
     <div class="row"> 
@@ -27,8 +26,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "RG", "Fantasma", "Mesmo Sem Estar" e "Estaca Zero"</li>
     </ul>
     <div class="card-body">
-      <a href="https://youtube.com/playlist?list=PL-82ABGzbmAVA-G_nJILTqe1G99kAFFaN&feature=shared" class="card-link">Álbum</a>
-      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+      <button class="botão"><a href="https://youtube.com/playlist?list=PL-82ABGzbmAVA-G_nJILTqe1G99kAFFaN&feature=shared" class="card-link">Álbum</a></button>
+      <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
     </div>
   </div>
       </div>
@@ -45,8 +44,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Choque Térmico", "A", "Ignore" e "Moça Chique"</li>
     </ul>
     <div class="card-body">
-      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIbXJT3UvX-fhkryMqfDBNjw&feature=shared" class="card-link">Álbum</a>
-      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+      <button class="botão"><a href="https://youtube.com/playlist?list=PLF2YmINCrjIbXJT3UvX-fhkryMqfDBNjw&feature=shared" class="card-link">Álbum</a></button>
+      <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
     </div>
   </div>
       </div>
@@ -63,8 +62,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Morena", "Sorria", "Ilha" e "Assim Nasce Um Bêbado"</li>
     </ul>
     <div class="card-body">
-      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIZtp65Zc_LxeQssvcyHcF5Q&feature=shared" class="card-link">Álbum</a>
-      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+      <button class="botão"><a href="https://youtube.com/playlist?list=PLF2YmINCrjIZtp65Zc_LxeQssvcyHcF5Q&feature=shared" class="card-link">Álbum</a></button>
+      <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
     </div>
   </div>
       </div>
@@ -81,8 +80,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Abalo Emocional", "Seu Doutor", "Facilita", "Maldito Girasol" e "Coração Cigano"</li>
     </ul>
     <div class="card-body">
-      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIagvLMkWLoOE-tCHfIePMMq&feature=shared" class="card-link">Álbum<a>
-      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+      <button class="botão"><a href="https://youtube.com/playlist?list=PLF2YmINCrjIagvLMkWLoOE-tCHfIePMMq&feature=shared" class="card-link">Álbum</a></button>
+      <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
     </div>
   </div>
       </div>
@@ -99,8 +98,8 @@
       <li class="list-group-item"><strong>Princípais faixas:</strong> "Meio Termo", "Mulher Segura", "EAI", "Ambiente Errado" e "Tímida"</li>
     </ul>
     <div class="card-body">
-      <a href="https://youtube.com/playlist?list=PLF2YmINCrjIYDtVBftrjfWP2VuKDlQrRh&feature=shared" class="card-link">Álbum</a>
-      <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+      <button class="botão"><a href="https://youtube.com/playlist?list=PLF2YmINCrjIYDtVBftrjfWP2VuKDlQrRh&feature=shared" class="card-link">Álbum</a></button>
+      <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
     </div>
   </div>
       </div>
@@ -117,8 +116,8 @@
           <li class="list-group-item"><strong>Princípais faixas:</strong> "Clone", "Certeza", "Sedutor", "Coisas Que Eu Não Vou Deixar de Ter" e "Se Arrependimento Matasse"</li>
         </ul>
         <div class="card-body">
-          <a href="https://youtu.be/7sqvbH_ONcc?feature=shared" class="card-link">Clone</a>
-          <a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a>
+         <button class="botão"><a href="https://youtu.be/7sqvbH_ONcc?feature=shared" class="card-link">Clone</a></button>
+          <button class="botão"><a href="https://www.youtube.com/@LuanSantana" class="card-link">Luan Santana</a></button>
         </div>
       </div>
       </div>
